--- a/css/simple-line-icons.css
+++ b/css/simple-line-icons.css
@@ -3,13 +3,13 @@
  */
 
 @charset "UTF-8";
-@font-face {
+/* @font-face {
    font-family: simple-line-icons;
    src: url(../fonts/simple-line-icons.eot);
    src: url(../fonts/simple-line-icons.eot?#iefix)  format('embedded-opentype'), url(../fonts/simple-line-icons.woff)  format('woff'), url(../fonts/simple-line-icons.ttf)  format('truetype'), url(../fonts/simple-line-icons.svg#simple-line-icons)  format('svg');
    font-weight: 400;
    font-style: normal;
-}
+} */
 [data-icon]:before {
    font-family: simple-line-icons;
    content: attr(data-icon);
