--- a/css/style.css
+++ b/css/style.css
@@ -7,8 +7,8 @@
 @import "cubeportfolio.min.css"; 
 
 /*----- Fonts -----*/
-@import url(http://fonts.googleapis.com/css?family=Exo:400,700,800,900);
-@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,300);
+@import url(https://fonts.googleapis.com/css?family=Exo:400,700,800,900);
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,300);
 @import "simple-line-icons.css";
 @import "ionicons.min.css";
 
@@ -2109,7 +2109,7 @@ blockquote strong {
     font-family: 'Exo', sans-serif;
     font-weight: 400;
 	width: 100%; 
-	max-width: ;
+	/* max-width: ; */
 	padding: 12.9px; 
 	color: #1c1c1c; 
 	background: #f2f2f2; 
@@ -2130,7 +2130,7 @@ textarea {
 	background: #f2f2f2; 
 	border: 1px solid #f0f0f0; 
 	margin-top: 7px;
-	margin-left: ;
+	/* margin-left: ; */
 	margin-right:15px;
 	-webkit-border-radius: 2px; 
 }
@@ -3203,7 +3203,7 @@ pre {
     font-family: 'Exo', sans-serif;
     font-weight: 400;
 	width: 100%; 
-	max-width: ;
+	/* max-width: ; */
 	padding: 12.9px; 
 	color: #1c1c1c; 
 	background: #f2f2f2; 
