--- a/css/style.css
+++ b/css/style.css
@@ -52,7 +52,7 @@ a:focus, a:active, button::-moz-focus-inner, input[type="reset"]::-moz-focus-inn
         padding: 0 90px;
     }
 }
-@media (min-width: 768px) and (max-width: 992px)) {
+@media (min-width: 768px) and (max-width: 992px) {
     .container { 
         width: 100%;
         padding: 0 120px;
