--- a/css/style.css
+++ b/css/style.css
@@ -45,6 +45,9 @@ a:focus, a:active, button::-moz-focus-inner, input[type="reset"]::-moz-focus-inn
     border: 0;
     outline : 0;
 }
+header{
+    width: 100%;
+}
 @media only screen and (min-width: 1200px) {
     .container {
         max-width: 1425px;
