--- a/css/style.css
+++ b/css/style.css
@@ -2246,10 +2246,12 @@ border-bottom:1px dotted #ccc;
     color: #7a7a7a;
 }
 
-/*----- Google maps -----*/
-#map {
-  height: 400px;
-  width: 100%;
+.map iframe {
+    margin-left: 1%;
+    width: 100%;
+    height: 430px;
+    border-radius: 15px;
+
 }
 
 /*----- Footer 1 -----*/
